daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N22_bad_dhkem_encapsulation/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae3015840116f52254491ac5c66b411745b553421663c628a67b99a37c628c3d64b17ff2483c3c080f3d282e4a673515b79e00d8bd567e32f8aa882a180fcfb777ed5a55701f602f6
